XO_Project_UAT/Project--XOGrp--UAT/src/objects/CountryZipREGEX__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Enter in ALL CAPS</inlineHelpText>
        <label>CountryCode</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegExPattern__c</fullName>
        <label>RegExPattern</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>CountryZipREGEX</label>
</CustomObject>